2012-01-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5 release.
	* facebook/__init__.py (FacebookPhotoList): Ignore some entries
	  which have not picture URIs.

2012-01-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5-rc1 release.

2011-12-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/__init__.py (FacebookAlbumListStore): Fixed a bug.

2011-12-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5-b3 release.
	* urlgetautoproxy.py: Improved error handling.
	* html.py: Added size attributes on icon image tags.

2011-12-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5-b2 release.
	* plugins/picasa.py: Picasa feeds have not included exif data.

2011-12-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5-b1 release.
	* image/animation.py: Fixed a import error.

2011-12-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* share/history/history.html: Added the icon to the history.html.
	* image/gtkimage.py, plugins/base/base.py: Fixed size attribute
	  problems.
	* tumblr/__init__.py: Added size attributes.

2011-12-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/actor/map.py: Added new gconf key 'ui/map/source_uri'.

2011-11-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/actor/map.py: Added support for Map on image with
	  libchamplain.

2011-11-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.4.1 release.

2011-11-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* config.py: Added support for gconf.VALUE_LIST.
	* plugins/facebook/, gphotoframe.ui: Started implementation for
	  Facebook album selection (issue #98).

2011-11-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fr.po: Added French translation.  Thanks MathieuMD!

2011-11-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* frame.py: Added new gconf key 'gravity' for a workaround for
	  a Xfwm bug (issue #97).  Xfwm does not support GDK_GRAVITY
	  correctly.  The frame window gravity needs be set to
	  GDK_GRAVITY_NORTH_WEST forcelly.
	