@@ -1,4 +1,4 @@
-Overall, Gnome Photo Frame is licensed the following terms:
+Overall, GPhotoFrame is licensed the following terms:
 
     Copyright (c) 2009-2012 Yoshizumi Endo.
 
@@ -15,7 +15,7 @@ Overall, Gnome Photo Frame is licensed the following terms:
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-Gnome Photo Frame documentation is licensed the following terms:
+GPhotoFrame documentation is licensed the following terms:
 
     Copyright (c) 2010-2011 Cristian Marchi.
 
