@@ -1,4 +1,4 @@
-GNOME Photo Frame - A Photo Frame Gadget for the GNOME Desktop.
+GPhotoFrame - A Photo Frame Gadget for the GNOME Desktop.
 
 * About
 
