@@ -143,7 +143,7 @@ class AboutDialog(object):
         gui = gtk.Builder()
         gui.add_from_file(constants.UI_FILE)
         about = gui.get_object('aboutdialog')
-        about.set_name(_('GNOME Photo Frame'))
+        about.set_name(_('GPhotoFrame'))
         about.set_property('version', constants.VERSION)
         gtk.about_dialog_set_url_hook(self._open_url)
         about.run()
