@@ -1,3 +1,8 @@
+2012-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* gphotoframe: Renamed the product name from GNOME Photo Frame to
+	  GPhotoFrame (issue #104).
+
 2012-01-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 1.5 release.
